fix: extended user listing endpoint
